--- a/tests/jasmine/SpecRunner.html
+++ b/tests/jasmine/SpecRunner.html
@@ -21,6 +21,7 @@
   <script src="../../public/assets/js/forms-collection.js"></script>
   <script src="../../public/assets/js/form.js"></script>
   <script src="../../public/assets/js/item.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/fbSpec.js"></script>
